k8s/single deployment/01-mgw-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgw
  namespace: legacy
spec:
  selector:
    matchLabels:
      app: mgw
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: mgw
        external-ingress: enabled
    spec:
      containers:
      - name: php
        image: registry.diginfra.net/php-apache:5.6
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
      - name: mysql
        image: registry.diginfra.net/mysql:5.6
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 200m
            memory: 500Mi
        ports:
          - containerPort: 3306
            name: mgw-mysql
