k8s/single deployment/03-mgw-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mgw
  namespace: legacy
spec:
  rules:
  - host: mgw.meertens.knaw.nl
    http:
      paths:
      - backend:
          serviceName: mgw-service
          servicePort: http
